@@ -27,13 +27,10 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 
 import org.jboss.as.controller.parsing.Attribute;
 import org.jboss.as.controller.parsing.Element;
 import org.jboss.as.host.controller.logging.HostControllerLogger;
-import org.wildfly.security.manager.WildFlySecurityManager;
 
 /**
  *
@@ -166,65 +163,30 @@ public class JvmOptionsBuilderFactory {
             return true;
         }
 
-        abstract void addPermGen(JvmElement jvm, List<String> command);
-    }
-
-    private static class SunJvmOptionsBuilder extends JvmOptionsBuilder {
-        public static final int JVM_MAJOR_VERSION;
-
-        static {
-            int vmVersion;
-            try {
-                String vmVersionStr = WildFlySecurityManager.getPropertyPrivileged("java.specification.version", null);
-                Matcher matcher = Pattern.compile("^1\\.(\\d+)$").matcher(vmVersionStr); //match 1.<number>
-                if (matcher.find()) {
-                    vmVersion = Integer.valueOf(matcher.group(1));
-                } else {
-                    HostControllerLogger.ROOT_LOGGER.jvmVersionUnknown(vmVersionStr);
-                    vmVersion = 7;
-                }
-            } catch (Exception e) {
-                vmVersion = 7;
-            }
-            JVM_MAJOR_VERSION = vmVersion;
-        }
-
-
-        public SunJvmOptionsBuilder(JvmType type) {
-            super(type);
-        }
-
-        @Override
-        void addPermGen(JvmElement jvmElement, List<String> command) {
-            if (JVM_MAJOR_VERSION >= 8) return; //java 8 doesn't have prem gen anymore. jdk9 fails if it is set.
-            String permgen = jvmElement.getPermgenSize();
-            String maxPermgen = jvmElement.getMaxPermgen();
-            if (maxPermgen == null && permgen != null) {
-                maxPermgen = permgen;
-            }
-            if (permgen == null && maxPermgen != null) {
-                permgen = maxPermgen;
-            }
-            if (permgen != null) {
-                command.add("-XX:PermSize=" + permgen);
-            }
-            if (maxPermgen != null) {
-                command.add("-XX:MaxPermSize=" + maxPermgen);
-            }
-        }
-    }
-
-    private static class IbmJvmOptionsBuilder extends JvmOptionsBuilder {
-
-        public IbmJvmOptionsBuilder(JvmType type) {
-            super(type);
-        }
-
-        @Override
         void addPermGen(JvmElement jvmElement, List<String> command) {
             if (jvmElement.getPermgenSize() != null || jvmElement.getMaxPermgen() != null) {
                 ROOT_LOGGER.ignoringPermGen(type, jvmElement.getName());
             }
         }
+    }
+
+    private static class SunJvmOptionsBuilder extends JvmOptionsBuilder {
+        private SunJvmOptionsBuilder(JvmType type) {
+            super(type);
+        }
+
+        // This builder doesn't override anything currently, since the addPermgen behavior
+        // became standard. But we keep the concept in case we do vm-specific stuff
+        // in the future
+    }
+
+    private static class IbmJvmOptionsBuilder extends JvmOptionsBuilder {
+        private IbmJvmOptionsBuilder(JvmType type) {
+            super(type);
+        }
+
+        // This builder doesn't override anything currently, since the addPermgen behavior
+        // became standard. But we keep the concept in case we do vm-specific stuff
+        // in the future
     }
 }
